--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "d3-array": "^2.2.0",
+    "d3-scale": "^3.0.1",
+    "d3-scale-chromatic": "^1.4.0",
+    "d3-selection": "^1.4.0",
+    "d3-time": "^1.0.11",
+    "d3-time-format": "^2.1.3",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.2.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
